--- a/style/hostingPage.css
+++ b/style/hostingPage.css
@@ -21,7 +21,7 @@ body {
 nav {
     display: flex;
     align-items: center;
-    height: 70px;
+    height: 90px;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
     background-color: #3c5672;
     width: 100%;
@@ -31,19 +31,18 @@ nav {
     z-index: 1000; /* Garante que a navbar fique sobre outros elementos */
 }
 
-nav ul {
-    list-style: none;
+.nav-left {
     display: flex;
     align-items: center;
-    padding: 0;
-    width: 100%; /* Certifique-se de que a lista ocupe toda a largura */
 }
 
-nav ul li {
-    margin: 0 10px;
+.nav-right {
+    margin-left: auto; /* Empurra o conteúdo para a direita */
+    display: flex;
+    align-items: center;
 }
 
-nav ul li a {
+.nav-left a {
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
@@ -52,12 +51,55 @@ nav ul li a {
     letter-spacing: 0.1em;
 }
 
+.checkbox {
+    position: absolute;
+    opacity: 0;
+}
+
+nav .label {
+    background-color: #111;
+    border-radius: 50px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px;
+    position: relative;
+    height: 30px;
+    width: 55px;
+    transform: scale(0.9);
+}
+
+.label .ball {
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 25px;
+    width: 25px;
+    transform: translateX(0px);
+    transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+    transform: translateX(24px);
+}
+
+.bi-brightness-high-fill {
+    color: #f1c40f;
+}
+
+.bi-moon-fill {
+    color: #fff;
+}
+
 /* Seção de filtro */
 .filter-locality {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 100px 20px 0 20px;
+    margin: 120px 20px 0 20px;
     flex-wrap: wrap; /* Permite quebra de linha em telas pequenas */
     gap: 20px;
 }
@@ -194,7 +236,7 @@ button:focus {
     margin-right: 10px; /* Move a seta direita 10px para a esquerda */
 }
 
-i {
+.control i {
     display: flex;
     cursor: pointer;
     align-items: center;
@@ -209,7 +251,7 @@ i {
     overflow: hidden; /* Garantir que o preenchimento seja visível apenas dentro do ícone */
 }
 
-i:hover {
+.control i:hover {
     background-color: #d9d9d9;
 }
 
@@ -340,3 +382,55 @@ i:hover {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+
+/* Dark mode */
+
+body.dark-mode {
+    background-color: #121212; /* Fundo principal escuro */
+    color: #e0e0e0; /* Texto claro */
+}
+
+/* Navbar no Dark Mode */
+body.dark-mode nav {
+    background-color: #1c1c1c;
+}
+
+body.dark-mode .list-head i, body.dark-mode .list-head p {
+    color: #e1e1e1
+}
+
+/* Inputs e botões no Dark Mode */
+body.dark-mode input {
+    background-color: #333;
+    color: #e0e0e0;
+    border: 1px solid #333;
+}
+
+body.dark-mode input::placeholder {
+    color: #888;
+}
+
+body.dark-mode button {
+    color: #e0e0e0;
+}
+
+body.dark-mode .name-table th {
+    background-color: #333;
+    color: #fff;
+}
+
+body.dark-mode .name-table tr:nth-child(even) {
+    background-color: #333;
+}
+
+body.dark-mode .name-table tr:nth-child(even) label {
+    color: #fff;
+}
+
+body.dark-mode .list-head {
+    background-color: #333;
+    color: #e0e0e0;
+}
+
+
