--- a/style/registro_pagamentos.css
+++ b/style/registro_pagamentos.css
@@ -409,6 +409,328 @@ body.dark-mode .suggestion-item {
     color: #007bff; /* Azul para o total geral */
 }
 
+/* Estilo principal para o popup de inscrição geral */
+.popup-inscricao-geral {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+body.dark-mode .popup-inscricao-geral input {
+    background-color: #f2f2f2;
+}
+
+body.dark-mode .popup-inscricao-geral input::placeholder {
+    color: #333;
+}
+
+body.dark-mode .popup-inscricao-geral label {
+    color: #f2f2f2;
+}
+
+/* Conteúdo do popup */
+.popup-inscricao-geral .popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 700px;
+    height: 650px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Botão de fechar */
+.popup-inscricao-geral .close-btn-inscricao-geral {
+    color: #333;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    user-select: none;
+}
+
+/* Título do popup */
+.popup-inscricao-geral .popup-title {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+/* Container para campos de entrada */
+.popup-inscricao-geral .popup-input-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    justify-content: start;
+    margin-left: 50px;
+    margin-top: 30px;
+}
+
+/* Grupo de entrada com duas colunas */
+.popup-inscricao-geral .input-group {
+    width: calc(50% - 8px);
+    text-align: left;
+}
+
+.popup-inscricao-geral .input-group input {
+    width: 200px;
+}
+
+/* Para alinhar o grupo da quantidade à esquerda */
+.popup-inscricao-geral .input-group-quantity {
+    width: 100%;
+    text-align: left;
+}
+
+.popup-inscricao-geral .payment-container {
+    max-height: 300px; /* Define a altura máxima do contêiner de pagamento */
+    overflow-y: auto; /* Adiciona uma barra de rolagem vertical quando necessário */
+    padding: 10px; /* Espaço interno para o contêiner */
+    margin-top: 20px;
+}
+
+/* Estiliza a barra de rolagem do contêiner */
+.popup-inscricao-geral .payment-container::-webkit-scrollbar {
+    width: 6px; /* Diminui a largura da barra de rolagem */
+}
+
+/* Estilos para Firefox */
+.popup-inscricao-geral .payment-container {
+    scrollbar-width: thin; /* Controla a largura da barra de rolagem */
+}
+
+/* Grupo de pagamento */
+.popup-inscricao-geral .input-group-payment {
+    width: 100%;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    position: relative;
+    padding: 5px;
+    margin-top: 20px;
+    border-radius: 4px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Alinha o campo de forma de pagamento à esquerda */
+.popup-inscricao-geral .input-group-payment-left {
+    margin-top: 23px;
+    margin-left: 50px;
+    flex: 1;
+}
+
+/* Alinha o campo de valor à direita */
+.popup-inscricao-geral .input-group-payment-right {
+    margin-top: 23px;
+    flex: 1;
+}
+
+/* Rótulos */
+.popup-inscricao-geral .input-group label, .popup-inscricao-geral .input-group-payment label {
+    font-weight: bold;
+    color: #555;
+    display: block;
+    margin-bottom: 5px;
+}
+
+/* Campos de seleção e entrada */
+.popup-inscricao-geral .select-day, .popup-inscricao-geral .select-meal, .popup-inscricao-geral .select-payment,
+.popup-inscricao-geral .input-quantity, .popup-inscricao-geral .input-amount {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 14px;
+    width: 200px;
+    margin-bottom: 20px;
+}
+
+/* Container do botão */
+.popup-inscricao-geral .button-container {
+    display: flex;
+    justify-content: end;
+    position: sticky;
+    bottom: 20px;
+    margin-top: 20px;
+    z-index: 10;
+}
+
+/* Botão de salvar */
+.popup-inscricao-geral .btn-save {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+/* Ícone de adicionar no canto superior direito */
+.popup-inscricao-geral .icon-add {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 2px 2px 0 0;
+    color: #28a745;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+/* Efeito de hover no botão de salvar */
+.popup-inscricao-geral .btn-save:hover {
+    background-color: #218838;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Estilo do Modal de Pagamento */
+.payment-modal {
+    display: flex;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.payment-modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 50%; /* Aumentando a largura do modal para 70% */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column; /* Para organizar o conteúdo em coluna */
+    gap: 20px;
+    height: auto; /* Ajusta a altura conforme o conteúdo */
+    min-height: 300px; /* Define uma altura mínima */
+    position: relative; /* Necessário para o posicionamento absoluto do "X" */
+}
+
+/* Estilo do botão de fechar (X) */
+.payment-modal .close-btn {
+    color: red;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    position: absolute; /* Posiciona o "X" de forma absoluta dentro do container */
+    top: 10px; /* Distância do topo */
+    right: 10px; /* Distância da direita */
+}
+
+/* Estilo das informações de pagamento */
+.payment-info-wrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 15px;
+}
+
+.payment-info-left,
+.payment-info-center {
+    flex: 1; /* Cada uma ocupa 1 parte igual do espaço disponível */
+    min-width: 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+}
+
+.payment-info-left p,
+.payment-info-center p {
+    margin: 5px 0;
+}
+
+.payment-info-left strong,
+.payment-info-center strong {
+    font-weight: bold;
+}
+
+/* Centraliza o conteúdo da coluna central */
+.payment-info-wrapper .payment-info-center {
+    text-align: center;
+}
+
+/* Estilo do grupo de inputs de pagamento */
+.input-group-payment {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.icon-add {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.input-group-payment-left,
+.input-group-payment-right {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    flex: 1;
+}
+
+.input-group-payment-left label,
+.input-group-payment-right label {
+    font-size: 14px;
+    color: #333;
+}
+
+.select-payment,
+.input-amount {
+    padding: 8px;
+    font-size: 14px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+.input-amount {
+    text-align: right;
+}
+
+/* Estilo do botão de finalizar pagamento */
+.payment-button-container {
+    display: flex;
+    justify-content: center; /* Centraliza o botão */
+    align-items: center; /* Centraliza verticalmente */
+    width: 100%; /* Garante que o botão ocupe toda a largura disponível */
+    margin-top: 20px;
+}
+
+.payment-button-container .btn-submit-payment {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: auto; /* Ajusta o tamanho do botão ao conteúdo */
+    margin-bottom: 10px; /* Espaço abaixo do botão */
+}
+
+.payment-button-container .btn-submit-payment:hover {
+    background-color: #218838;
+}
+
+
 /* Remover setas de incremento e decremento em inputs numéricos no Webkit (Chrome, Safari) */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
@@ -762,8 +1084,7 @@ body.dark-mode .meal-table th {
     font-size: 16px;
     transition: background-color 0.3s, box-shadow 0.3s;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
-    margin-left: 20px;
+    margin: 20px 40px 20px;
     font-family: "Roboto", sans-serif;
     font-weight: bolder;
 }
@@ -1431,7 +1752,7 @@ body.dark-mode .table-none p{
     border-radius: 5px;
     width: 100%;
     max-width: 650px;
-    height: 400px;
+    height: 500px;
     user-select: none;
 }
 
