--- a/style/userRegister.css
+++ b/style/userRegister.css
@@ -138,7 +138,21 @@ body.dark-mode .register-form h2 {
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
-    position: relative; /* Adicionado para posicionamento correto do suggestions */
+    position: relative;
+}
+
+.input-group a {
+    position: absolute;
+    right: 10px;
+    top: 52%;
+    color: #666;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+body.dark-mode .input-group a {
+    color: #bbb;
 }
 
 .input-group label {
@@ -246,7 +260,6 @@ body.dark-mode #suggestions::-webkit-scrollbar-thumb {
 body.dark-mode #suggestions::-webkit-scrollbar-thumb:hover {
     background: #888;
 }
-
 
 .suggestion-item {
     padding: 8px;
